# crystal-packing

./: .envrc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  Cargo.toml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  appveyor.yml  azure-pipeline.yml  plot_output.py  rustfmt.toml  setup.cfg  setup.py  test.txt  tox.ini  travis_pypi_setup.py
.chglog/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: linters.yml  security.yml  tests.yml
benches/: intersection.rs
conda-recipe/: build.sh  meta.yaml
crystal-packing/: Cargo.toml
crystal-packing-cli/: Cargo.toml
crystal-packing-wasm/: Cargo.toml
crystal-packing/proptest-regressions/: transform.txt
crystal-packing/src/: cell.rs  optimisation.rs  site.rs  to_svg.rs  traits.rs
crystal-packing/src/shape/: line_shape.rs  lj_shape.rs  mod.rs  molecular_shape2.rs
crystal-packing/src/state/: packed.rs  potential.rs
crystal_packing/: Cargo.toml
crystal_packing/benches/: intersection.rs
crystal_packing/src/: cell.rs  lib.rs  optimisation.rs  site.rs  to_svg.rs  traits.rs  transform.rs
crystal_packing/src/basis/: mod.rs  shared_value.rs
crystal_packing/src/shape/components/: atom2.rs  line2.rs  line2_ops.rs  mod.rs
crystal_packing/tests/: packing.rs  potential.rs
crystal_packing_cli/: Cargo.toml  optimisation.rs
crystal_packing_cli/src/: main.rs
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
packing/: Cargo.toml
packing/benches/: intersection.rs
packing/src/: cell.rs  optimisation.rs  site.rs  wallpaper.rs
packing/src/basis/: mod.rs  shared_value.rs
packing/src/shape/: lj_shape.rs  molecular_shape2.rs
packing/src/shape/components/: lj2_ops.rs
packing/src/state/: packed.rs  potential.rs
packing/tests/: packing.rs  potential.rs
packing_cli/: Cargo.toml
packing_cli/src/: main.rs
packing_wasm/: Cargo.toml
packing_wasm/src/: lib.rs  optimiser.rs  state.rs  struct.rs
packing_wasm/www/: index.html  index.js  package-lock.json  package.json
pypacking/: __init__.py  cli.py  pypacking.py
pypacking/rust/: Cargo.toml
src/: basis.rs  cell.rs  iter.rs  lib.rs  main.rs  ops_macros.rs  optimisation.rs  packing.rs  potential.rs  shape.rs  site.rs  symmetry.rs  to_svg.rs  traits.rs  transform.rs  wallpaper.rs
src/U2/: cell.rs  mod.rs  site.rs
src/U2/shape/: atom.rs  atom_ops.rs  line.rs  line_ops.rs  line_shape.rs  mod.rs  molecular_shape.rs  shape_instance.rs
src/U2/symmetry/: transform.rs
src/U3/: mod.rs
src/U3/shape/: atom.rs  atom_ops.rs  mod.rs
src/U3/symmetry/: mod.rs  transform.rs
src/cell/: cell2.rs  mod.rs
src/shape/: atom.rs  atom_ops.rs  line.rs  line_ops.rs  line_shape.rs  lj_shape.rs  mod.rs  molecular_shape.rs  molecular_shape2.rs  shape_instance.rs
src/shape/components/: atom2.rs  atom2_ops.rs  atom3.rs  atom3_ops.rs  line2.rs  line2_ops.rs  lj2.rs  lj2_ops.rs  mod.rs
src/site/: mod.rs  site.rs  site2.rs
src/state/: mod.rs  packed.rs  potential.rs
src/symmetry/: mod.rs  symmetry.rs  symmetry_ops.rs  transform.rs  transform_ops.rs
tests/: packing.rs  packing_invalid_1.json  packing_invalid_2.json  potential.rs  test_pypacking.py
