[package]
name = "packing"
version = "0.3.0"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = {version="~0.18.0", features=["serde-serialize"]}
approx = "~0.3.0"
rand = "~0.7.0"
rand_pcg = "0.2.0"
log = "~0.4.8"
simplelog = "~0.6.0"
clap = "~2.33.0"
rayon = "~1.1.0"
itertools = "~0.8.0"
serde = {version="~1.0.99", features=["derive"]}
serde_json = "~1.0.40"
svg = "~0.5.12"

[dev-dependencies]
criterion = "0.2"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[[bench]]
name = "intersection"
harness = false
