[package]
name = "crystal_packing"
version = "0.6.0"
authors = ["Malcolm Ramsay <m@malramsay.com>"]
edition = "2018"
license = "MIT"
description = "Core library for packing shapes in an infinite crystal lattice."

[dependencies]
nalgebra = {version="~0.27.1", features=["serde-serialize"]}
rand = "~0.8.0"
rand_pcg = "0.3.0"
log = "~0.4.8"
itertools = "~0.10.0"
serde = {version="~1.0.130", features=["derive"]}
anyhow = "1.0"
svg = "~0.10.0"

[dev-dependencies]
approx = "~0.5.0"
criterion = "0.3"
proptest = "1.0"
proptest-attr-macro = "1.0"

[lib]
bench = false

[[bench]]
name = "intersection"
harness = false
