[package]
name = "crystal_packing_cli"
version = "0.6.0"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[dependencies]
crystal_packing = {path="../crystal_packing"}
rand = "0.8"
rand_pcg = "0.3"
log = "~0.4.8"
env_logger = "~0.7.0"
clap = "~2.33.0"
structopt = { version="0.3", features=["paw"]}
paw = "1.0"
rayon = "~1.5.1"
serde = {version="~1.0.98", features=["derive"]}
serde_json = "~1.0.40"
anyhow = "1.0"
svg = "~0.9.0"

[dev-dependencies]
approx = "~0.4.0"
criterion = "0.3"
proptest = "1.0"
proptest-attr-macro = "1.0"

[[bin]]
name = "packing"
path = "src/main.rs"
