[package]
name = "packing"
version = "0.6.0"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = {version="~0.22.0", features=["serde-serialize"]}
rand = "~0.7.0"
rand_pcg = "0.2.0"
log = "~0.4.8"
itertools = "~0.8.0"
serde = {version="~1.0.98", features=["derive"]}
anyhow = "1.0"
svg = "~0.8.0"

[dev-dependencies]
approx = "~0.3.0"
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[lib]
bench = false

[[bench]]
name = "intersection"
harness = false
